# text-recovery

./: .gitignore  CMakeLists.txt  README.md
data_preparation/: CMakeLists.txt  arg_parser_ex.cpp  arg_parser_ex.h  main.cpp  tree_builder.cpp  tree_builder.h
lib/: CMakeLists.txt
lib/arg_parser/: CMakeLists.txt  arg_parser.cpp  arg_parser.h  argument.cpp  argument.h
lib/bk_tree/: CMakeLists.txt  bk_tree.cpp  bk_tree.h  bk_tree_node.cpp  bk_tree_node.h  edit_distance.cpp  edit_distance.h
lib/trie/: CMakeLists.txt  trie.cpp  trie.h  trie_node.cpp  trie_node.h
lib/word_prob/: CMakeLists.txt  word_context_analyzer.cpp  word_context_analyzer.h  word_prob.cpp  word_prob.h
main_app/: CMakeLists.txt
